--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
 		"postinstall": "nuxt prepare"
 	},
 	"devDependencies": {
-		"@nuxt/image": "^0.7.1",
+		"@nuxt/image-edge": "1.0.0-27913696.5d122a3",
 		"@nuxtjs/google-fonts": "3.0.0-1",
-		"nuxt": "3.0.0",
+		"nuxt": "^3.1.0",
 		"nuxt-icon": "^0.2.6",
 		"sass": "^1.57.1"
 	},
 	"dependencies": {
 		"@formkit/nuxt": "1.0.0-beta.12",
+		"@nuxtjs/robots": "^3.0.0",
+		"@vueuse/gesture": "2.0.0-beta.1",
 		"@vueuse/nuxt": "^9.9.0",
 		"gsap": "^3.11.4",
 		"postcss-preset-env": "^7.8.3"
