--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,6 @@
 	"extends": "./.nuxt/tsconfig.json",
 	"compilerOptions": {
 		"forceConsistentCasingInFileNames": true,
-		"target": "es5"
+		"target": "esnext"
 	}
 }
