--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
 		"postinstall": "nuxt prepare"
 	},
 	"devDependencies": {
+		"@nuxt/devtools": "^0.2.5",
 		"@nuxt/image-edge": "1.0.0-27913696.5d122a3",
 		"@nuxtjs/google-fonts": "3.0.0-1",
 		"@nuxtjs/tailwindcss": "^6.4.0",
-		"nuxt": "^3.1.0",
+		"nuxt": "^3.3.0",
 		"nuxt-icon": "^0.2.6",
 		"sass": "^1.57.1",
 		"vite-svg-loader": "^4.0.0"
