--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
 		"@formkit/vue": "1.0.0-beta.15",
 		"@nuxtjs/robots": "^3.0.0",
 		"@vueuse/gesture": "2.0.0-beta.1",
+		"@vueuse/integrations": "^9.13.0",
 		"@vueuse/nuxt": "^9.9.0",
+		"focus-trap": "^7.4.0",
 		"gsap": "^3.11.4",
 		"motion": "^10.15.5",
 		"postcss-preset-env": "^7.8.3"
