--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@vueuse/gesture": "2.0.0-beta.1",
 		"@vueuse/integrations": "^9.13.0",
 		"@vueuse/nuxt": "^9.9.0",
+		"daisyui": "^2.51.5",
 		"focus-trap": "^7.4.0",
 		"gsap": "^3.11.4",
 		"motion": "^10.15.5",
