industry to sector on forms

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,20 @@
 {
-	"cSpell.words": ["currentsection", "Fransico", "Urcia"]
+	"cSpell.words": [
+		"Bullard",
+		"currentsection",
+		"Fransico",
+		"Hernando",
+		"Hillsborough",
+		"LEED",
+		"Moffitt",
+		"partnerlist",
+		"PHSC",
+		"Pinellas",
+		"QAQC",
+		"shyconstruction",
+		"Sideby",
+		"Submittals",
+		"TOBA",
+		"Urcia"
+	]
 }
