--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"focus-trap": "^7.4.0",
 		"gsap": "^3.11.4",
 		"motion": "^10.15.5",
+		"nuxt-swiper": "^1.1.0",
 		"postcss-preset-env": "^7.8.3"
 	},
 	"browserslist": [
