--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,12 @@
 	"cSpell.words": [
 		"Bullard",
 		"currentsection",
+		"DSCF",
 		"Fransico",
 		"Hernando",
 		"Hillsborough",
 		"LEED",
+		"menulink",
 		"Moffitt",
 		"partnerlist",
 		"PHSC",
