--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
 		"daisyui": "^2.51.5",
 		"focus-trap": "^7.4.0",
 		"gsap": "^3.11.4",
+		"lite-youtube-embed": "^0.2.0",
 		"motion": "^10.15.5",
 		"nuxt-swiper": "^1.1.0",
-		"postcss-preset-env": "^7.8.3"
+		"postcss-preset-env": "^7.8.3",
+		"vue-lite-youtube-embed": "^1.2.0"
 	},
 	"browserslist": [
 		">0.3%",
