Airtable to Manage content

--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
 		"@formkit/nuxt": "1.0.0-beta.12",
 		"@formkit/themes": "1.0.0-beta.16-18186fe",
 		"@formkit/vue": "1.0.0-beta.15",
+		"@notionhq/client": "^2.2.14",
 		"@nuxtjs/robots": "^3.0.0",
 		"@vueuse/gesture": "2.0.0-beta.1",
 		"@vueuse/integrations": "^9.13.0",
 		"@vueuse/nuxt": "^9.9.0",
+		"airtable": "^0.12.2",
 		"focus-trap": "^7.4.0",
 		"gsap": "^3.11.4",
 		"lite-youtube-embed": "^0.2.0",
