--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"nuxt": "^3.9.2",
 		"nuxt-icon": "^0.2.6",
 		"nuxt-schema-org": "^2.1.2",
+		"nuxt-vercel-analytics": "^1.0.0",
 		"sass": "^1.57.1",
 		"vite-svg-loader": "^4.0.0"
 	},
@@ -28,6 +29,7 @@
 		"@formkit/vue": "1.0.0-beta.15",
 		"@notionhq/client": "^2.2.14",
 		"@nuxtjs/robots": "^3.0.0",
+		"@vercel/analytics": "^1.1.2",
 		"@vueuse/gesture": "2.0.0-beta.1",
 		"@vueuse/integrations": "^9.13.0",
 		"@vueuse/nuxt": "^9.9.0",
