--- a/package.json
+++ b/package.json
@@ -27,8 +27,12 @@
 		"@formkit/nuxt": "1.0.0-beta.12",
 		"@formkit/themes": "1.0.0-beta.16-18186fe",
 		"@formkit/vue": "1.0.0-beta.15",
+		"@hebilicious/vue-query-nuxt": "^0.3.0",
 		"@notionhq/client": "^2.2.14",
 		"@nuxtjs/robots": "^3.0.0",
+		"@preline/collapse": "^2.0.2",
+		"@preline/dropdown": "^2.0.2",
+		"@tanstack/vue-query": "^5.22.2",
 		"@vercel/analytics": "^1.1.2",
 		"@vueuse/gesture": "2.0.0-beta.1",
 		"@vueuse/integrations": "^9.13.0",
@@ -40,6 +44,7 @@
 		"motion": "^10.15.5",
 		"nuxt-swiper": "^1.1.0",
 		"postcss-preset-env": "^7.8.3",
+		"preline": "^2.0.3",
 		"vue-lite-youtube-embed": "^1.2.0",
 		"vue-multiselect": "3.0.0-beta.2"
 	},
