--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"@nuxtjs/robots": "^3.0.0",
 		"@preline/collapse": "^2.0.2",
 		"@preline/dropdown": "^2.0.2",
+		"@preline/scrollspy": "^2.0.2",
 		"@tanstack/vue-query": "^5.22.2",
 		"@vercel/analytics": "^1.1.2",
 		"@vueuse/gesture": "2.0.0-beta.1",
