--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"@nuxt/image-edge": "1.0.0-27913696.5d122a3",
 		"@nuxtjs/google-fonts": "3.0.0-1",
 		"@nuxtjs/tailwindcss": "^6.4.0",
-		"daisyui": "^4.6.0",
+		"@tailwindcss/forms": "^0.5.7",
 		"nuxt": "^3.9.2",
 		"nuxt-icon": "^0.2.6",
 		"nuxt-schema-org": "^2.1.2",
