--- a/package.json
+++ b/package.json
@@ -56,6 +56,9 @@
 	"resolutions": {
 		"@nuxt/kit": ">=3.2.3"
 	},
+	"overrides": {
+		"consola": "^3.0.0"
+	},
 	"browserslist": [
 		">0.3%",
 		"not ie 11",
