--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
 		"nuxt-schema-org": "^2.1.2",
 		"nuxt-vercel-analytics": "^1.0.0",
 		"sass": "^1.57.1",
-		"vite-svg-loader": "^4.0.0"
+		"vite-svg-loader": "^4.0.0",
+		"vitest": "^1.4.0"
 	},
 	"dependencies": {
 		"@formkit/addons": "1.0.0-beta.15",
