--- a/package.json
+++ b/package.json
@@ -9,46 +9,43 @@
 		"postinstall": "nuxt prepare"
 	},
 	"devDependencies": {
-		"@nuxt/devtools": "^0.2.5",
-		"@nuxt/image": "^1.2.0",
+		"@nuxt/devtools": "^1.5.2",
+		"@nuxt/icon": "^1.5.3",
+		"@nuxt/image": "^1.8.1",
 		"@nuxt/image-edge": "1.0.0-27913696.5d122a3",
+		"@nuxt/scripts": "^0.9.4",
+		"@nuxt/ui": "^2.18.6",
+		"@nuxt/ui-pro": "^1.4.3",
 		"@nuxtjs/google-fonts": "3.0.0-1",
-		"@nuxtjs/tailwindcss": "^6.4.0",
-		"@tailwindcss/forms": "^0.5.7",
-		"nuxt": "^3.11.1",
-		"nuxt-icon": "^0.2.6",
-		"nuxt-schema-org": "^2.1.2",
-		"nuxt-vercel-analytics": "^1.0.0",
-		"sass": "^1.57.1",
+		"@nuxtjs/tailwindcss": "^6.12.1",
+		"@tailwindcss/forms": "^0.5.9",
+		"nuxt": "^3.13.2",
+		"nuxt-schema-org": "^2.2.0",
+		"nuxt-vercel-analytics": "^1.0.3",
+		"sass": "^1.79.4",
 		"vite-svg-loader": "^4.0.0",
-		"vitest": "^1.4.0"
+		"vitest": "^1.6.0"
 	},
 	"dependencies": {
-		"@hebilicious/form-actions-nuxt": "^0.3.0",
-		"@hebilicious/server-block-nuxt": "^0.3.4",
-		"@hebilicious/sfc-server-volar": "^0.3.4",
-		"@hebilicious/vue-query-nuxt": "^0.3.0",
-		"@nuxt/ui": "^2.14.2",
-		"@nuxt/ui-pro": "^1.0.2",
 		"@nuxtjs/partytown": "^1.5.0",
 		"@nuxtjs/robots": "^3.0.0",
-		"@preline/collapse": "^2.0.2",
-		"@preline/dropdown": "^2.0.2",
-		"@preline/scrollspy": "^2.0.2",
-		"@tanstack/vue-query": "^5.22.2",
-		"@vercel/analytics": "^1.1.2",
+		"@preline/collapse": "^2.5.0",
+		"@preline/dropdown": "^2.5.0",
+		"@preline/scrollspy": "^2.5.0",
+		"@tanstack/vue-query": "^5.59.1",
+		"@vercel/analytics": "^1.3.1",
 		"@vercel/speed-insights": "^1.0.12",
 		"@vueuse/gesture": "2.0.0-beta.1",
 		"@vueuse/integrations": "^9.13.0",
-		"@vueuse/nuxt": "^9.9.0",
+		"@vueuse/nuxt": "^9.13.0",
 		"airtable": "^0.12.2",
-		"focus-trap": "^7.4.0",
-		"gsap": "^3.11.4",
-		"motion": "^10.15.5",
+		"focus-trap": "^7.6.0",
+		"gsap": "^3.12.5",
+		"motion": "^10.18.0",
 		"postcss-preset-env": "^7.8.3",
-		"preline": "^2.0.3",
+		"preline": "^2.5.0",
 		"vue-multiselect": "3.0.0-beta.2",
-		"zod": "^3.22.4"
+		"zod": "^3.23.8"
 	},
 	"resolutions": {
 		"@nuxt/kit": ">=3.2.3"
