--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@nuxt/ui": "^2.18.6",
 		"@nuxt/ui-pro": "^1.4.3",
 		"@nuxtjs/google-fonts": "3.0.0-1",
+		"@nuxtjs/sitemap": "^6.1.2",
 		"@nuxtjs/tailwindcss": "^6.12.1",
 		"@tailwindcss/forms": "^0.5.9",
 		"nuxt": "^3.13.2",
