--- a/package.json
+++ b/package.json
@@ -9,33 +9,34 @@
 		"postinstall": "nuxt prepare"
 	},
 	"devDependencies": {
-		"@nuxt/devtools": "^1.5.2",
-		"@nuxt/icon": "^1.5.3",
+		"@nuxt/devtools": "^1.6.0",
+		"@nuxt/icon": "^1.5.7",
 		"@nuxt/image": "^1.8.1",
 		"@nuxt/image-edge": "1.0.0-27913696.5d122a3",
-		"@nuxt/scripts": "^0.9.4",
-		"@nuxt/ui": "^2.18.6",
-		"@nuxt/ui-pro": "^1.4.3",
+		"@nuxt/scripts": "^0.9.5",
+		"@nuxt/ui": "^2.18.7",
+		"@nuxt/ui-pro": "^1.4.4",
 		"@nuxtjs/google-fonts": "3.0.0-1",
 		"@nuxtjs/partytown": "^1.5.0",
 		"@nuxtjs/sitemap": "^6.1.2",
-		"@nuxtjs/tailwindcss": "^6.12.1",
+		"@nuxtjs/tailwindcss": "^6.12.2",
 		"@tailwindcss/forms": "^0.5.9",
 		"nuxt": "^3.13.2",
 		"nuxt-schema-org": "^2.2.0",
 		"nuxt-vercel-analytics": "^1.0.3",
-		"sass": "^1.79.4",
+		"sass": "^1.80.4",
 		"vite-svg-loader": "^4.0.0",
 		"vitest": "^1.6.0"
 	},
 	"dependencies": {
-		"@nuxtjs/robots": "^3.0.0",
+		"@formkit/auto-animate": "^0.8.2",
+		"@nuxtjs/robots": "^4.1.9",
 		"@preline/collapse": "^2.5.0",
 		"@preline/dropdown": "^2.5.0",
 		"@preline/scrollspy": "^2.5.0",
-		"@tanstack/vue-query": "^5.59.1",
-		"@vercel/analytics": "^1.3.1",
-		"@vercel/speed-insights": "^1.0.12",
+		"@tanstack/vue-query": "^5.59.16",
+		"@vercel/analytics": "^1.3.2",
+		"@vercel/speed-insights": "^1.0.14",
 		"@vueuse/gesture": "2.0.0-beta.1",
 		"@vueuse/integrations": "^9.13.0",
 		"@vueuse/nuxt": "^9.13.0",
@@ -45,7 +46,7 @@
 		"motion": "^10.18.0",
 		"nuxt-lazy-load": "^3.0.4",
 		"postcss-preset-env": "^7.8.3",
-		"preline": "^2.5.0",
+		"preline": "^2.5.1",
 		"vue-multiselect": "3.0.0-beta.2",
 		"zod": "^3.23.8"
 	},
