--- a/package.json
+++ b/package.json
@@ -10,36 +10,35 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "^1.6.0",
-    "@nuxt/icon": "^1.5.7",
+    "@nuxt/icon": "^1.7.2",
     "@nuxt/image": "^1.8.1",
     "@nuxt/image-edge": "1.0.0-27913696.5d122a3",
     "@nuxt/scripts": "^0.9.5",
-    "@nuxt/ui": "^2.18.7",
-    "@nuxt/ui-pro": "^1.4.4",
+    "@nuxt/ui": "^2.19.2",
+    "@nuxt/ui-pro": "^1.5.0",
     "@nuxtjs/google-fonts": "3.0.0-1",
     "@nuxtjs/partytown": "^1.5.0",
-    "@nuxtjs/sitemap": "^6.1.2",
+    "@nuxtjs/sitemap": "^6.1.5",
     "@nuxtjs/tailwindcss": "^6.12.2",
     "@tailwindcss/forms": "^0.5.9",
-    "nuxt": "^3.13.2",
+    "@vercel/kv": "^1.0.1",
+    "nuxt": "^3.14.159",
     "nuxt-schema-org": "^2.2.0",
     "nuxt-vercel-analytics": "^1.0.3",
-    "sass": "^1.80.4",
+    "sass": "^1.80.7",
     "vite-svg-loader": "^4.0.0",
     "vitest": "^1.6.0"
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.8.2",
-    "@nuxtjs/robots": "^4.1.9",
-    "@tanstack/vue-query": "^5.59.16",
-    "@vercel/analytics": "^1.3.2",
-    "@vercel/speed-insights": "^1.0.14",
+    "@nuxtjs/robots": "^4.1.11",
+    "@vercel/analytics": "^1.4.0",
+    "@vercel/speed-insights": "^1.1.0",
     "@vueuse/gesture": "2.0.0-beta.1",
     "@vueuse/integrations": "^9.13.0",
     "@vueuse/nuxt": "^9.13.0",
     "airtable": "^0.12.2",
-    "focus-trap": "^7.6.0",
-    "gsap": "^3.12.5",
+    "focus-trap": "^7.6.1",
     "motion": "^10.18.0",
     "nuxt-lazy-load": "^3.0.4",
     "postcss-preset-env": "^7.8.3",
