--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nuxt-schema-org": "^2.2.0",
     "nuxt-vercel-analytics": "^1.0.3",
     "sass": "^1.80.7",
+    "v-gsap-nuxt": "^1.3.3",
     "vite-svg-loader": "^4.0.0",
     "vitest": "^1.6.0"
   },
@@ -40,6 +41,7 @@
     "airtable": "^0.12.2",
     "focus-trap": "^7.6.1",
     "motion": "^10.18.0",
+    "motion-v": "^1.1.1",
     "nuxt-lazy-load": "^3.0.4",
     "postcss-preset-env": "^7.8.3",
     "preline": "^2.5.1",
