--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.8.2",
+    "@nuxtjs/critters": "^0.9.0",
     "@nuxtjs/robots": "^4.1.11",
     "@vercel/analytics": "^1.4.0",
     "@vercel/speed-insights": "^1.1.0",
